--- a/explorer/src/glade/main.glade
+++ b/explorer/src/glade/main.glade
@@ -3,21 +3,30 @@
 <interface>
   <requires lib="gtk+" version="3.20"/>
   <object class="GtkApplicationWindow" id="window-main">
-    <property name="width_request">320</property>
-    <property name="height_request">240</property>
     <property name="can_focus">False</property>
+    <property name="default_width">800</property>
+    <property name="default_height">400</property>
+    <property name="has_resize_grip">True</property>
     <child>
       <object class="GtkBox">
         <property name="visible">True</property>
         <property name="can_focus">False</property>
         <property name="orientation">vertical</property>
         <child>
-          <object class="GtkTreeView" id="list-results">
+          <object class="GtkScrolledWindow">
             <property name="visible">True</property>
             <property name="can_focus">True</property>
-            <property name="enable_grid_lines">horizontal</property>
-            <child internal-child="selection">
-              <object class="GtkTreeSelection"/>
+            <property name="shadow_type">in</property>
+            <property name="max_content_height">250</property>
+            <child>
+              <object class="GtkTreeView" id="list-results">
+                <property name="visible">True</property>
+                <property name="can_focus">True</property>
+                <property name="enable_grid_lines">horizontal</property>
+                <child internal-child="selection">
+                  <object class="GtkTreeSelection"/>
+                </child>
+              </object>
             </child>
           </object>
           <packing>
