Dump event fields into table

--- a/explorer/src/glade/main.glade
+++ b/explorer/src/glade/main.glade
@@ -22,6 +22,7 @@
               <object class="GtkTreeView" id="list-results">
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
+                <property name="rules_hint">True</property>
                 <property name="enable_grid_lines">horizontal</property>
                 <child internal-child="selection">
                   <object class="GtkTreeSelection"/>
