--- a/explorer/src/glade/main.glade
+++ b/explorer/src/glade/main.glade
@@ -5,21 +5,26 @@
   <object class="GtkApplicationWindow" id="window-main">
     <property name="can_focus">False</property>
     <property name="title" translatable="yes">Event Store Explorer</property>
+    <property name="resizable">False</property>
     <property name="default_width">800</property>
     <property name="default_height">500</property>
     <property name="has_resize_grip">True</property>
+    <child>
+      <placeholder/>
+    </child>
     <child>
       <object class="GtkBox">
         <property name="visible">True</property>
         <property name="can_focus">False</property>
         <property name="orientation">vertical</property>
-        <property name="homogeneous">True</property>
+        <property name="spacing">18</property>
         <child>
           <object class="GtkScrolledWindow">
             <property name="visible">True</property>
             <property name="can_focus">True</property>
             <property name="shadow_type">in</property>
             <property name="max_content_height">250</property>
+            <property name="propagate_natural_height">True</property>
             <child>
               <object class="GtkTreeView" id="list-results">
                 <property name="visible">True</property>
@@ -61,6 +66,11 @@
               <object class="GtkBox">
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
+                <property name="margin_left">12</property>
+                <property name="margin_right">12</property>
+                <property name="margin_top">12</property>
+                <property name="margin_bottom">12</property>
+                <property name="spacing">12</property>
                 <child>
                   <object class="GtkFrame">
                     <property name="visible">True</property>
@@ -71,12 +81,15 @@
                       <object class="GtkAlignment">
                         <property name="visible">True</property>
                         <property name="can_focus">False</property>
-                        <property name="left_padding">12</property>
                         <child>
                           <object class="GtkTextView" id="selected-event-data">
                             <property name="visible">True</property>
                             <property name="can_focus">True</property>
                             <property name="editable">False</property>
+                            <property name="left_margin">6</property>
+                            <property name="right_margin">6</property>
+                            <property name="top_margin">6</property>
+                            <property name="bottom_margin">6</property>
                             <property name="cursor_visible">False</property>
                             <property name="monospace">True</property>
                           </object>
@@ -107,12 +120,15 @@
                       <object class="GtkAlignment">
                         <property name="visible">True</property>
                         <property name="can_focus">False</property>
-                        <property name="left_padding">12</property>
                         <child>
                           <object class="GtkTextView" id="selected-event-context">
                             <property name="visible">True</property>
                             <property name="can_focus">True</property>
                             <property name="editable">False</property>
+                            <property name="left_margin">6</property>
+                            <property name="right_margin">6</property>
+                            <property name="top_margin">6</property>
+                            <property name="bottom_margin">6</property>
                             <property name="cursor_visible">False</property>
                             <property name="monospace">True</property>
                           </object>
