--- a/explorer/src/glade/main.glade
+++ b/explorer/src/glade/main.glade
@@ -6,7 +6,7 @@
     <property name="can_focus">False</property>
     <property name="title" translatable="yes">Event Store Explorer</property>
     <property name="default_width">1000</property>
-    <property name="default_height">550</property>
+    <property name="default_height">700</property>
     <property name="has_resize_grip">True</property>
     <child>
       <placeholder/>
@@ -54,6 +54,7 @@
                   <object class="GtkTreeView" id="list-results">
                     <property name="visible">True</property>
                     <property name="can_focus">True</property>
+                    <property name="vexpand">True</property>
                     <property name="rules_hint">True</property>
                     <property name="enable_grid_lines">horizontal</property>
                     <child internal-child="selection">
