Add do-nothing DB chooser

--- a/explorer/src/glade/main.glade
+++ b/explorer/src/glade/main.glade
@@ -22,10 +22,48 @@
             <property name="can_focus">False</property>
             <property name="orientation">vertical</property>
             <child>
-              <object class="GtkSearchBar">
+              <object class="GtkBox" id="search-header">
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
-                <property name="search_mode_enabled">True</property>
+                <property name="margin_left">18</property>
+                <property name="margin_right">18</property>
+                <property name="spacing">12</property>
+                <property name="homogeneous">True</property>
+                <child>
+                  <object class="GtkBox">
+                    <property name="visible">True</property>
+                    <property name="can_focus">False</property>
+                    <property name="spacing">12</property>
+                    <child>
+                      <object class="GtkLabel">
+                        <property name="visible">True</property>
+                        <property name="can_focus">False</property>
+                        <property name="label" translatable="yes">Database</property>
+                      </object>
+                      <packing>
+                        <property name="expand">False</property>
+                        <property name="fill">True</property>
+                        <property name="position">0</property>
+                      </packing>
+                    </child>
+                    <child>
+                      <object class="GtkComboBoxText" id="database-chooser">
+                        <property name="visible">True</property>
+                        <property name="can_focus">False</property>
+                      </object>
+                      <packing>
+                        <property name="expand">False</property>
+                        <property name="fill">True</property>
+                        <property name="position">1</property>
+                      </packing>
+                    </child>
+                  </object>
+                  <packing>
+                    <property name="expand">False</property>
+                    <property name="fill">True</property>
+                    <property name="position">0</property>
+                  </packing>
+                </child>
                 <child>
                   <object class="GtkSearchEntry" id="query-input">
                     <property name="visible">True</property>
@@ -36,11 +74,20 @@
                     <property name="primary_icon_sensitive">False</property>
                     <property name="placeholder_text" translatable="yes">namespace.EventType</property>
                   </object>
+                  <packing>
+                    <property name="expand">False</property>
+                    <property name="fill">True</property>
+                    <property name="position">1</property>
+                  </packing>
+                </child>
+                <child>
+                  <placeholder/>
                 </child>
               </object>
               <packing>
                 <property name="expand">False</property>
                 <property name="fill">True</property>
+                <property name="padding">18</property>
                 <property name="position">0</property>
               </packing>
             </child>
