Focus search input on start

--- a/explorer/src/glade/main.glade
+++ b/explorer/src/glade/main.glade
@@ -68,6 +68,7 @@
                   <object class="GtkSearchEntry" id="query-input">
                     <property name="visible">True</property>
                     <property name="can_focus">True</property>
+                    <property name="has_focus">True</property>
                     <property name="width_chars">50</property>
                     <property name="primary_icon_name">edit-find-symbolic</property>
                     <property name="primary_icon_activatable">False</property>
